hard-gists/1844928/run.log
=== Docker Run Log for 1844928 ===
Started at: Mi 29. Okt 12:30:50 CET 2025

[2025-10-29 12:30:51] START: Running container for 1844928
[2025-10-29 12:30:51] SUCCESS: Container 64df2d219fc256ce0859fd4c832f52c8d1b0c97715bc4224cd8f158549bc6626 started for 1844928
=== Container logs for 1844928 ===
  File "/snippet.py", line 88
    print 'max query exceeded'
    ^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 1844928 ===
[2025-10-29 12:30:53] INFO: Container 64df2d219fc256ce0859fd4c832f52c8d1b0c97715bc4224cd8f158549bc6626 has stopped
